--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch server.js"
+    "start": "node --watch server.js",
+    "initDB": "node ./db/init_db.js"
   },
   "engines": {
     "node": ">= 18.0.0"
