--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "nodemailer-sendgrid": "^1.0.3",
+    "picocolors": "^1.0.0",
     "sharp": "^0.32.4"
   },
   "devDependencies": {
