--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
+    "flickity": "^2.3.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^4.0.6",
     "react-router-dom": "^6.15.0",
     "sonner": "^0.7.0"
   },
